--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -3,12 +3,16 @@ label.password = Passwort
 label.password_forgotten = Passwort vergessen?
 label.login = Kundenlogin
 label.login_text = Ich bin bereits Kunde und verfüge Zugangsdaten mit denen ich mich anmelden möchte.
-label.buy_as_guest = Als Gast fortfahren
+label.buy_as_guest = Als Gast einkaufen
 label.my_account = Mein Konto
+label.new_customer = Neukunde
+label.new_customer_text = Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor error mollitia quaerat quod repellat saepe tempore voluptas.
 label.newest_first = Neueste zuerst
 label.price = Preis
 label.price_asc = Preis aufsteigend
 label.offer = Angebot
+label.firstname = Vorname
+label.lastname = Nachname
 label.amount = Menge
 label.total = Gesamt
 label.vat_in_addition = zzgl. {{tax}}% MwSt.
@@ -16,10 +20,16 @@ label.description = Beschreibung
 label.application = Anwendung von {{product_name}}
 label.preview = Vorschau
 label.product = Produkt
-
+label.no_product_in_cart = Der Warenkorb ist leer
+label.buy_as_guest_text = Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor error mollitia quaerat quod repellat saepe tempore voluptas.
 
 action.login = Anmelden
+action.register = Registrieren
 action.buy_as_guest = Als Gast fortfahren
 action.add_to_cart = In den Warenkorb
 
+
 error.login_failed = Die Anmeldung ist fehlgeschlagen
+error.cart_product_not_exists = {{replace}} Produkt/e existieren nicht mehr und wurde/n deshalb aus dem Warenkorb entfernt
+error.cart_product_not_available = {{replace}} ist zur Zeit nicht verfügbar und wurde deshalb aus dem Warenkorb entfernt
+error.cart_product_not_enough_amount = {{replace}} sind nur noch {{count}} Stück verfügbar, deshalb wurde die Anzahl im Warenkorb reduziert
