--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,11 +1,16 @@
 label.overview = Übersicht
 label.name = Bezeichnung
 label.variants = Varianten
+label.order_no = Bestellnr.
+label.customer = Kunde
+label.order_sum = Bestellsumme
+
 
 action.manage_variants = Varianten verwalten
 action.edit_product = Produkt bearbeiten
 action.edit_value = Wert bearbeiten
 action.show_in_frontend = Im Frontend anzeigen
+action.submit = Absenden
 
 error.cannot_delete_category = Die Kategorie "{{name}}" kann nicht gelöscht werden da folgende Produkte noch verlinkt sind
 error.cannot_delete_tax = Der Steuersatz "{{name}}" kann nicht gelöscht werden da folgende Produkte noch verlinkt sind
