--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -47,3 +47,6 @@ settings.order_notification_email = Email für neue Bestellungen
 settings.discount_settings = Rabatt-Einstellungen
 settings.discount_application = Rabatt-Anwendung
 settings.discounts_are_accumulable = Rabatte können (wenn möglich) alle akkumuliert/gleichzeitig angewendet werden
+settings.shop_settings = Shop-Einstellungen
+settings.price_rounding = Preis-Rundung
+settings.price_rounding_info = Alle Preise auf 1 Nachkommastelle runden
