--- a/plugins/omest_shipping/lang/de_de.lang
+++ b/plugins/omest_shipping/lang/de_de.lang
@@ -12,7 +12,7 @@ omest_shipping.pickup_city = Ort/Stadt vom Shop
 omest_shipping.pickup_street = Straße vom Shop
 omest_shipping.pickup_zip = Postleitzahl vom Shop
 omest_shipping.pickup_country_code = Ländercode vom Shop
-omest_shipping.size_info = Länge / Breite / Höhe in mm
+omest_shipping.size_info = Länge / Breite / Höhe in cm
 omest_shipping.weight_info = Gewicht in g
 omest_shipping.is_pallett = Palette
 omest_shipping.add_package = Paket hinzufügen
