--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -24,7 +24,9 @@ label.product_list = Produktliste
 label.accounting = Buchhaltung
 label.what_u_want_todo = Was wollen Sie tun?
 label.resend_email = Bestellungs-Email an Kunde senden
+label.recalculate_sums = Werte neu berechnen
 label.msg_resend_email = Email wurde versendet
+label.msg_recalculate_sums = Werte wurden aktualisiert
 
 
 action.manage_variants = Varianten verwalten
