--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -50,6 +50,7 @@ error.product_has_attribute = Das Produkt hat keine Eigenschaften zugewiesen. Kl
 error.product_has_no_attribute_but_variants = Das Produkt hat keine Eigenschaften zugewiesen, jedoch existieren aber Varianten mit folgenden Eigenschaften:
 
 settings.order_settings = Bestellungs-Einstellungen
+settings.page_mapping = Artikel-Mapping
 settings.order_notification_email = Email für neue Bestellungen
 settings.discount_settings = Rabatt-Einstellungen
 settings.discount_application = Rabatt-Anwendung
