--- a/lang/sprog.csv
+++ b/lang/sprog.csv
@@ -1,13 +1,48 @@
 Wildcard
 label.shipping_method
+label.shipping_address
+label.invoice_address
+label.account_data
 label.payment_method
+label.coupon
+label.tax
+label.tax_included
+
+simpleshop.product_not_available
 simpleshop.no_products_in_cart
 simpleshop.error.cart_product_not_enough_amount
 simpleshop.data_saved
 simpleshop.summary_order
-simpleshop.coupon
+simpleshop.redeem_coupon
+simpleshop.shipping_default
+simpleshop.bank_transfer
+simpleshop.cash
+simpleshop.order_placed
+simpleshop.promotions
+simpleshop.applied_promotion_text
+simpleshop.omest_shipping
+simpleshop.paypal_express
+simpleshop.shipping_pickup_point
+simpleshop.cancellation_terms
+simpleshop.order_complete_pickup_text
+simpleshop.banktransfer_order_complete_text
+simpleshop.order_complete_default_shipping_text
+simpleshop.omest_shipping_text
+simpleshop.order_complete_pickup_text
 
-shop.shipping_default
-shop.shipping_pickup_point
-shop.bank_transfer
-shop.paypal_express
+simpleshop.error.tos_rma_not_accepted
+simpleshop.error.coupon_not_exists
+simpleshop.error.coupon_consumed
+simpleshop.error.coupon_not_yet_valid
+simpleshop.error.coupon_not_valid_anymore
+simpleshop.error.discountgroup_not_applyable_anymore
+simpleshop.error.order_has_no_product
+simpleshop.error.shipping_zipcode_not_valid
+simpleshop.error.shipping_no_price
+
+simpleshop.email.user_registration_subject
+simpleshop.email.user_password_reset
+simpleshop.email.order_complete
+simpleshop.email.password_reset_text
+simpleshop.email.order_complete_text
+simpleshop.email.registration_text
