--- a/lang/sprog.csv
+++ b/lang/sprog.csv
@@ -15,6 +15,8 @@ label.status
 label.products
 label.similar_products
 label.load_more
+label.load_more
+label.vat_short
 
 error.insert_company_name
 error.insert_firstname
