--- a/lang/sprog.csv
+++ b/lang/sprog.csv
@@ -17,6 +17,7 @@ label.similar_products
 label.load_more
 label.load_more
 label.vat_short
+label.tax
 
 error.insert_company_name
 error.insert_firstname
@@ -53,7 +54,7 @@ simpleshop.order_complete_pickup_text
 simpleshop.shipping_address_is_idem
 simpleshop.invoice_num
 simpleshop.shipping_costs
-simpleshop.subtotal
+simpleshop.brutto_total
 simpleshop.total_sum
 simpleshop.amount
 simpleshop.tax_included_value
