--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -71,6 +71,7 @@ settings.content_dashboard = Dashboard
 settings.content_history = Bestellhistorie
 settings.content_addresses = Adressen
 settings.content_account = Profildaten
+settings.content_rma = Wiederrufsrecht
 
 yform_values.coupon_functions_description = Funktionen für Coupon-Codes
 yform_values.order_functions_description = Funktionen für Bestelldokumente
