--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -72,6 +72,9 @@ settings.content_history = Bestellhistorie
 settings.content_addresses = Adressen
 settings.content_account = Profildaten
 settings.content_rma = Wiederrufsrecht
+settings.shop_functions = Shop-Funktionen
+settings.category_linking_label = Kategorie-Verlinkungen
+settings.category_linking_input_label = Schnell-Verlinkung im Backend aktivieren
 
 yform_values.coupon_functions_description = Funktionen für Coupon-Codes
 yform_values.order_functions_description = Funktionen für Bestelldokumente
