yform order_products value added

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -10,6 +10,7 @@ label.order_no = Bestellnr.
 label.customer = Kunde
 label.order_sum = Bestellsumme
 label.orders = Bestellungen
+label.net_single_price = Netto-Einzelpreis
 label.no_orders_export = Keine Bestellungen zum Export verfügbar
 label.data_saved = Daten gespeichert
 label.orders_export_info_text = Wählen Sie hier die Bestellungen aus die sie exportieren wollen.
@@ -21,8 +22,10 @@ label.packing_list_title = Lieferschein
 label.shipping_address = Lieferadresse
 label.return_address = Absenderadresse
 label.product_list = Produktliste
+label.product = Produkt
 label.accounting = Buchhaltung
 label.what_u_want_todo = Was wollen Sie tun?
+label.really_delete_entry = Wollen Sie wirklich den Eintrag löschen?
 label.resend_email = Bestellungs-Email an Kunde senden
 label.recalculate_sums = Werte neu berechnen
 label.msg_resend_email = Email wurde versendet
@@ -46,6 +49,7 @@ action.export = Exportieren
 action.print_packing_list = Lieferschein drucken
 action.edit_product_add_feature = Dem Produkt die fehlenden Eigenschaften zuweisen
 action.remove_all_variants = Alle Varianten entfernen
+action.remove = entfernen
 action.use_invoicing = Rechnungslegung verwenden
 
 error.cannot_delete_category = Die Kategorie "{{name}}" kann nicht gelöscht werden da folgende Produkte noch verlinkt sind
